--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style/shared.scss">
-    <link rel="stylesheet" href="style/main.scss">
+    <link href="/style/shared.css" type="text/css">
+    <link href="/style/main.css" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -71,6 +71,11 @@
         <div>
             <p class="drop_h">Поиск собрания</p>
             <img src="/img/cross.png" class="cross" />
+            <ul class="sort_drop">
+                <li><a href="#">номеру</a></li>
+                <li><a href="#">дате добавления</a></li>
+                <li><a href="#">статусу</a></li>
+            </ul>
         </div>
         <ul class="form_gr1">
             <li class="form_text">Номер собрания</li>
@@ -225,7 +230,7 @@
     </div>
 </div>
 
-    <script src="jquery/jquery-3.6.0.js"></script>
+    <!--<script src="jquery/jquery-3.6.0.js"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
