--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -26,7 +26,7 @@
     <div class="viewport"></div>
     <div class="login_container">
         <div class="login_block">
-            <h2>Проводим собрания кредиторов в элект--ронном формате</h2>
+            <h2>Проводим собрания кредиторов в элект-ронном формате</h2>
             <p class="login_text">Организация собраний кредиторов в Online и Offline режимах. Быстрый и удобный способ проведения собрания без лишних затрат</p>
             <button class="signin">Войти</button>
             <a class="signup" href="#">Зарегистрироваться</a>
