страница рег юл сделана на 100%

--- a/src/main/resources/tort.html
+++ b/src/main/resources/tort.html
@@ -74,42 +74,52 @@
 
         <div class="unn">
             <label for="inputEmail4" class="txt_obsh">ИНН*</label>
-            <input type="email" class="form-control" id="inputEmail4" placeholder="00000000">
+            <input type="email" class="forms" id="inputEmail4" placeholder="00000000">
         </div>
         <div class="codorg">
             <label for="inputPassword4" class="txt_obsh">Код ОГРН*</label>
-            <input type="password" class="form-control" id="inputPassword4" placeholder="000 000 000 00">
+            <input type="password" class="forms3" id="inputPassword4" placeholder="000 000 000 00">
         </div>
         <div class="poln_naim">
             <label for="inputAddress" class="txt_obsh">Полное наименование*</label>
-            <input type="text" class="form-control" id="inputAddress" placeholder="Полное наименование">
+            <input type="text" class="forms2" id="inputAddress" placeholder="Полное наименование">
         </div>
         <div class="qr_adres">
             <label for="inputAddress2" class="txt_obsh">Юридический адрес*</label>
-            <input type="text" class="form-control" id="inputAddress2" placeholder="Юридический адрес">
+            <input type="text" class="forms2" id="inputAddress2" placeholder="Юридический адрес">
         </div>
 
         <div class="pcht_adres">
             <label for="inputAddress2" class="txt_obsh">Почтовый адрес*</label>
-            <input type="text" class="form-control" id="inputAddress3" placeholder="Почтовый адрес">
+            <input type="text" class="forms2" id="inputAddress3" placeholder="Почтовый адрес">
         </div>
 
         <div class="telefon">
             <label for="inputAddress2" class="txt_obsh">Телефон*</label>
-            <input type="text" class="form-control" id="inputAddress4" placeholder="+7 (900) 000-12-34">
+            <input type="text" class="forms" id="inputAddress4" placeholder="+7 (900) 000-12-34">
         </div>
 
 
         <div class="email">
             <label for="inputState" class="txt_obsh">Электронная почта*</label>
-            <input type="text" class="form-control" id="inputState" placeholder="Электронная почта">
+            <input type="text" class="forms" id="inputState" placeholder="Электронная почта">
         </div>
 
         <div class="email_2">
             <label for="inputZip" class="txt_obsh">Повторите адрес электронной почты*</label>
-            <input type="text" class="form-control" id="inputZip" placeholder="Повторите адрес электронной почты">
+            <input type="text" class="forms3" id="inputZip" placeholder="Повторите адрес электронной почты">
         </div>
+<div>
+                <img
+                        alt=""
+                        class="doks2"
+                        src="https://static.overlay-tech.com/assets/bacc5c9f-2002-41b5-8bbd-45e4afc38a4e.svg"
+                />
 
+                <button type="button" class="knopka">Сохранить и подтвердить e-mail</button>
+</div>
+
+                <p class="prikrepit-dokument">Прикрепить документ</p>
 
         <p class="doks">Документы</p>
 
@@ -118,7 +128,7 @@
 
         <p class="txt2">Максимальный объём загружаемого файла 15 Мб. Документ должен быть в формате pdf или jpg</p>
 
-                <button type="button" class="knopka">Сохранить и подтвердить e-mail</button>
+
 
     </form>
 
