Нужны маски ввода

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -81,7 +81,7 @@
                 <li class="form_text">Должник</li>
                 <li><input type="text" placeholder="Должник" class="placeh"/></li>
             </ul>
-            <ul class="form3">
+            <ul class="form_3">
                 <li class="form_text">Организатор собрания (Арбитражный управляющий или кредитор)</li>
                 <li><input type="text" placeholder="Организатор собрания (Арбитражный управляющий или кредитор)" class="placeh" /></li>
             </ul>
@@ -90,13 +90,34 @@
                 <li class="date_f"><a>с</a><input type="text" placeholder="00.00.0000" class="placeh" /></li>
                 <li class="date_f"><a>по</a><input type="text" placeholder="00.00.0000" class="placeh" /></li>
             </ul>
-            <ul class="form_gr4">
+            <ul class="form_gr4 status">
                 <li class="form_text">Статус</li>
-                <li><input type="text" placeholder="Не выбрано" class="placeh" /><img src="img/down_arrow.svg" class="drop_arrw"/></li>
+                <li><input type="text" placeholder="Не выбрано" class="placeh mask_none" /><img src="img/down_arrow.svg" class="drop_arrw1"/></li>
+                <ul class="form_drop1">
+                    <li class="form1">Не выбрано</li>
+                    <li class="form2">Объявлено</li>
+                    <li class="form3">Прием заявок</li>
+                    <li class="form4">Прием заявок завершен</li>
+                    <li class="form5">Ожидание начала собрания</li>
+                    <li class="form6">В стадии проведения</li>
+                    <li class="form7">Подведение итогов</li>
+                    <li class="form8">Завершено</li>
+                    <li class="form9">Отменено</li>
+                    <li class="form10">Не состоялось</li>
+                    <li class="form11">Черновик</li>
+                    <li class="form12">Прием бюллетеней</li>
+                    <li class="form13">Прием бюллетеней завершен</li>
+                    <li class="form14">Приостановлено</li>
+                </ul>
             </ul>
-            <ul class="form_gr4">
+            <ul class="form_gr4 type">
                 <li class="form_text">Тип собрания</li>
-                <li><input type="text" placeholder="Не выбрано" class="placeh" /><img src="img/down_arrow.svg" class="drop_arrw"/></li>
+                <li><input type="text" placeholder="Не выбрано" class="placeh" /><img src="img/down_arrow.svg" class="drop_arrw2"/></li>
+                <ul class="form_drop2">
+                    <li class="form21">Не выбрано</li>
+                    <li class="form22">Очное</li>
+                    <li class="form23">Заочное</li>
+                </ul>
             </ul>
             <input type="submit" value="Поиск" class="srch_btn" />
         </form>
@@ -368,6 +389,115 @@
         $(".sort3").click(function(){
             $(".sort_val").text("статусу")
         });
+    });
+    $(document).ready(function(){
+        $(".form_drop1").hide()
+    });
+    $(document).ready(function(){
+        $(".form_drop2").hide()
+    });
+    /*
+    $(document).ready(function(){
+        $(".status li input").focus(function(){
+            $(".form_drop1").slideDown()
+        });
+    });
+    $(document).ready(function(){
+        $(".type li input").focus(function(){
+            $(".form_drop2").slideDown()
+        });
+    });
+*/
+    $(document).ready(function(){
+        $(".status li input").focus(function(){
+            $(".form_drop1").slideDown()
+        }).focus(function(){
+            $(".table").animate({
+                opacity: "0.3"
+            });
+        }).focus(function(){
+            $(".drop_arrw1").css("transform", "rotate(180deg)")
+        });
+    });
+    $(document).ready(function(){
+        $(".form_drop1").mouseleave(function(){
+            $(".form_drop1").slideUp()
+        }).mouseleave(function(){
+            $(".table").animate({
+                opacity: "1"
+            });
+        }).mouseleave(function(){
+            $(".drop_arrw1").css("transform", "rotate(360deg)")
+        });
+    });
+    $(document).ready(function(){
+        $(".form_drop1 li").click(function(){
+            $(".form_drop1").slideToggle()
+        }).click(function(){
+            $(".table").animate({
+                opacity: "1"
+            });
+        }).click(function(){
+            $(".drop_arrw1").css("transform", "rotate(360deg)")
+        })
+    });
+    $(document).ready(function(){
+        $(".drop_arrw1").click(function(){
+            $(".form_drop1").slideDown()
+        }).click(function(){
+            $(".table").animate({
+                opacity: "0.3"
+            });
+        }).click(function(){
+            $(".drop_arrw1").css("transform", "rotate(180deg)")
+        });
+    });
+    $(document).ready(function(){
+        $(".type li input").focus(function(){
+            $(".form_drop2").slideDown()
+        }).focus(function(){
+            $(".table").animate({
+                opacity: "0.3"
+            });
+        }).focus(function(){
+            $(".drop_arrw2").css("transform", "rotate(180deg)")
+        });
+    });
+    $(document).ready(function(){
+        $(".form_drop2").mouseleave(function(){
+            $(".form_drop2").slideUp()
+        }).mouseleave(function(){
+            $(".table").animate({
+                opacity: "1"
+            });
+        }).mouseleave(function(){
+            $(".drop_arrw2").css("transform", "rotate(360deg)")
+        });
+    });
+    $(document).ready(function(){
+        $(".form_drop2 li").click(function(){
+            $(".form_drop2").slideToggle()
+        }).click(function(){
+            $(".table").animate({
+                opacity: "1"
+            });
+        }).click(function(){
+            $(".drop_arrw2").css("transform", "rotate(360deg)")
+        })
+    });
+    $(document).ready(function(){
+        $(".drop_arrw2").click(function(){
+            $(".form_drop2").slideDown()
+        }).click(function(){
+            $(".table").animate({
+                opacity: "0.3"
+            });
+        }).click(function(){
+            $(".drop_arrw2").css("transform", "rotate(180deg)")
+        });
+    });
+    $(document).ready(function() {
+        $(".mask_none").mask("123/123");
     });
 </script>
 </body>
