страница рег юл сделана на 100% d d

--- a/src/main/resources/tort.html
+++ b/src/main/resources/tort.html
@@ -22,13 +22,14 @@
         </ul>
     </div>
 
+<div class="content">
     <div class="ogl">
 
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Главная</a></li>
-            <li class="breadcrumb-item"><a href="#">Библиотека</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Данные</li>
+            <li class="breadcrumb-item"><a href="#">Регистрация нового пользователя</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Участник собрания (Юридическое лицо)</li>
         </ol>
     </nav>
     </div>
@@ -131,7 +132,7 @@
 
 
     </form>
-
+</div>
 
 
 
