--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -253,6 +253,7 @@
     </div>
 </div>
     <script src="jquery/jquery-3.6.0.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <script>
     $(document).ready(function () {
@@ -396,18 +397,6 @@
     $(document).ready(function(){
         $(".form_drop2").hide()
     });
-    /*
-    $(document).ready(function(){
-        $(".status li input").focus(function(){
-            $(".form_drop1").slideDown()
-        });
-    });
-    $(document).ready(function(){
-        $(".type li input").focus(function(){
-            $(".form_drop2").slideDown()
-        });
-    });
-*/
     $(document).ready(function(){
         $(".status li input").focus(function(){
             $(".form_drop1").slideDown()
@@ -497,7 +486,77 @@
         });
     });
     $(document).ready(function() {
-        $(".mask_none").mask("123/123");
+        $.mask.definitions['0'] = "[0-9]";
+        $(".form_gr3 li input").mask("00.00.0000");
+    });
+    $(document).ready(function(){
+        $(".form1").click(function(){
+            $(".status li input").val("Не выбрано")
+        });
+    });
+    $(document).ready(function(){
+        $(".form2").click(function(){
+            $(".status li input").val("Объявлено")
+        });
+    });
+    $(document).ready(function(){
+        $(".form3").click(function(){
+            $(".status li input").val("Прием заявок")
+        });
+    });
+    $(document).ready(function(){
+        $(".form4").click(function(){
+            $(".status li input").val("Прием заявок завершен")
+        });
+    });
+    $(document).ready(function(){
+        $(".form5").click(function(){
+            $(".status li input").val("Ожидание начала собрания")
+        });
+    });
+    $(document).ready(function(){
+        $(".form6").click(function(){
+            $(".status li input").val("В стадии проведения")
+        });
+    });
+    $(document).ready(function(){
+        $(".form7").click(function(){
+            $(".status li input").val("Подведение итогов")
+        });
+    });
+    $(document).ready(function(){
+        $(".form8").click(function(){
+            $(".status li input").val("Завершено")
+        });
+    });
+    $(document).ready(function(){
+        $(".form9").click(function(){
+            $(".status li input").val("Отменено")
+        });
+    });
+    $(document).ready(function(){
+        $(".form10").click(function(){
+            $(".status li input").val("Не состоялось")
+        });
+    });$(document).ready(function(){
+        $(".form11").click(function(){
+            $(".status li input").val("Черновик")
+        });
+    });
+    $(document).ready(function(){
+        $(".form12").click(function(){
+            $(".status li input").val("Приём бюллетеней")
+        });
+    });
+    $(document).ready(function(){
+        $(".form13").click(function(){
+            $(".status li input").val("Приём бюллетеней завершен")
+        });
+    });
+    $(document).ready(function(){
+        $(".form14").click(function(){
+            $(".status li input").val("Приостановлено")
+        });
     });
 </script>
 </body>
