--- a/src/main/resources/tort.html
+++ b/src/main/resources/tort.html
@@ -22,7 +22,8 @@
         </ul>
     </div>
 
-<div class="content">
+    <div class="container">
+<!--<div class="content">-->
     <div class="ogl">
 
     <nav aria-label="breadcrumb">
@@ -133,6 +134,8 @@
 
     </form>
 </div>
+    </div>
+
 
 
 
