страница рег всех 99%

--- a/src/main/resources/tort.html
+++ b/src/main/resources/tort.html
@@ -112,11 +112,8 @@
             <input type="text" class="forms3" id="inputZip" placeholder="Повторите адрес электронной почты">
         </div>
 <div>
-                <img
-                        alt=""
-                        class="doks2"
-                        src="https://static.overlay-tech.com/assets/bacc5c9f-2002-41b5-8bbd-45e4afc38a4e.svg"
-                />
+    <img src="/img/add%201%20(Traced).svg" class="doks2"/>
+
 
                 <button type="button" class="knopka">Сохранить и подтвердить e-mail</button>
 </div>
