--- a/src/main/resources/tort2.html
+++ b/src/main/resources/tort2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style/main.css">
+    <link rel="stylesheet" type="text/css" href="style/uchql.css">
     <link rel="stylesheet" type="text/css" href="style/shared.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -33,119 +33,132 @@
     <div class="viewport">
         <div class="login_container">
             <div class="login_block">
-                <h2>
-                    <p class="fw-bold">Регистрация участника ИП </p>
-                </h2>
-                <p class="login_text">Для регистрации на электронной площадке Вам следует заполнить приведённую ниже форму. По результатам рассмотрения заявления Вам будет направлено уведомление на указанный в форме адрес электронной почты.
+                    <p class="reg_uch">Регистрация участника ИП </p>
 
-                    Внимание! Перед регистрацией Вам следует убедиться, что у вас настроены средства ЭП в соответствии с руководством. Вы регистрируетесь как участник собрания (Индивидуальный предприниматель). </p>
+                    <div class="reg_uch_txt">Для регистрации на электронной площадке Вам следует заполнить приведённую ниже форму. По результатам рассмотрения заявления Вам будет направлено уведомление на указанный в форме адрес электронной почты.
+                        <p>
+                        </p>
 
+                        Внимание! Перед регистрацией Вам следует убедиться, что у вас настроены средства ЭП в соответствии с руководством. Вы регистрируетесь как участник собрания (Индивидуальный предприниматель). </div>
+
+
+
+                    <p class="zaiav">Заявления</p>
+
+                    <div class="gal">
+                        <div class="form-check">
+                            <input class="kub1" type="checkbox" value="" id="flexCheckDefault1">
+                            <label class="gal_txt1" for="flexCheckDefault1">
+                                Прошу зарегистрировать меня в качестве участника собрания кредиторов*
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="kub2" type="checkbox" value="" id="flexCheckDefault2">
+                            <label class="gal_txt2" for="flexCheckDefault2">
+                                Настоящим сообщаю об ознакомлении и согласии с правилами, содержащимися в Регламенте электронной площадки*
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="kub3" type="checkbox" value="" id="flexCheckDefault3">
+                            <label class="gal_txt3" for="flexCheckDefault3">
+                                Настоящим подтверждаю свое согласие на обработку персональных данных необходимых для регистрации на электронной площадке*                </label>
+                        </div>
+                    </div>
+
+                    <form class="table2">
+
+                        <p class="inf_ob_uch">Информация об участнике собрания</p>
+
+        <div class="unn2">
+            <label for="inputEmail4" class="txt_obsh">ИНН*</label>
+            <input type="email" class="forms4" id="inputEmail4" placeholder="00000000">
+        </div>
+
+                <div class="snils">
+                    <label for="inputPassword5" class="txt_obsh">СНИЛС*</label>
+                    <input type="password" class="forms4" id="inputPassword5" placeholder="000 000 000 00">
+                </div>
+
+        <div class="codorg2">
+            <label for="inputPassword4" class="txt_obsh">Код ОГРН*</label>
+            <input type="password" class="forms4" id="inputPassword4" placeholder="000 000 000 00">
+        </div>
+
+                <div class="famil">
+                    <label for="inputEmail41" class="txt_obsh">Фамилия*</label>
+                    <input type="email" class="forms4" id="inputEmail41" placeholder="Фамилия">
+                </div>
+
+                <div class="name">
+                    <label for="inputPassword51" class="txt_obsh">Имя*</label>
+                    <input type="password" class="forms4" id="inputPassword51" placeholder="Имя">
+                </div>
+
+                <div class="otch">
+                    <label for="inputPassword41" class="txt_obsh">Отчество*</label>
+                    <input type="password" class="forms4" id="inputPassword41" placeholder="Отчество">
+                </div>
+
+        <div class="pcht_adres2">
+            <label for="inputAddress" class="txt_obsh">Почтовый адрес*</label>
+            <input type="text" class="forms2" id="inputAddress" placeholder="Почтовый адрес">
+        </div>
+        <div class="telefon2">
+            <label for="inputAddress2" class="txt_obsh">Телефон*</label>
+            <input type="text" class="forms" id="inputAddress2" placeholder="+7 (900) 000-12-34">
+        </div>
+
+        <div class="email2">
+            <label for="inputAddress3" class="txt_obsh">Электронная почта*</label>
+            <input type="text" class="forms" id="inputAddress3" placeholder="Электронная почта">
+        </div>
+
+                <div class="email2_2">
+                    <label for="inputAddress23" class="txt_obsh">Повторите адрес электронной почты*</label>
+                    <input type="text" class="forms3" id="inputAddress23" placeholder="Повторите адрес электронной почты">
+                </div>
+
+                <p class="pass">Паспортные данные </p>
+
+
+                <div class="seria">
+            <label for="inputAddress47" class="txt_obsh">Серия*</label>
+            <input type="text" class="forms4" id="inputAddress47" placeholder="00 00">
+        </div>
+                <div class="nomer">
+                    <label for="inputAddress49" class="txt_obsh">Номер*</label>
+                    <input type="text" class="forms4" id="inputAddress49" placeholder="000 000">
+                </div>
+                <div class="data_vidochi">
+                    <label for="inputAddress09" class="txt_obsh">Дата выдачи*</label>
+                    <input type="text" class="forms4" id="inputAddress09" placeholder="01.01.0000">
+                </div>
+
+
+        <div class="vidan">
+            <label for="inputState" class="txt_obsh">Кем выдан*</label>
+            <input type="text" class="forms2" id="inputState" placeholder="Кем выдан">
+        </div>
+
+
+<div>
+    <img src="/img/add%201%20(Traced).svg" class="doks2_2"/>
+
+    <button type="button" class="knopka2">Сохранить и подтвердить e-mail</button>
+
+</div>
+        <p class="doks_2">Документы</p>
+
+        <div class="txt_2">Перечень документов, которые необходимо приложить
+            к заявке, указан в Регламенте работы сервиса
+<p></p>
+        Максимальный объём загружаемого файла 15 Мб. Документ должен быть в формате pdf или jpg
             </div>
 
-            <p class="fw-bold">Заявления</p>
 
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault1">
-                <label class="form-check-label" for="flexCheckDefault1">
-                    Прошу зарегистрировать меня в качестве участника собрания кредиторов*
-                </label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault2">
-                <label class="form-check-label" for="flexCheckDefault2">
-                    Настоящим сообщаю об ознакомлении и согласии с правилами, содержащимися в Регламенте электронной площадки*
-                </label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault3">
-                <label class="form-check-label" for="flexCheckDefault3">
-                    Настоящим подтверждаю свое согласие на обработку персональных данных необходимых для регистрации на электронной площадке*                </label>
-            </div>
-
-            <form class="row g-3">
-        <div class="col-md-4">
-            <label for="inputEmail4" class="form-label">ИНН*</label>
-            <input type="email" class="form-control" id="inputEmail4" placeholder="00000000">
-        </div>
-
-                <div class="col-md-4">
-                    <label for="inputPassword5" class="form-label">СНИЛС*</label>
-                    <input type="password" class="form-control" id="inputPassword5" placeholder="000 000 000 00">
-                </div>
-
-        <div class="col-md-4">
-            <label for="inputPassword4" class="form-label">Код ОГРН*</label>
-            <input type="password" class="form-control" id="inputPassword4" placeholder="000 000 000 00">
-        </div>
-
-                <div class="col-md-4">
-                    <label for="inputEmail41" class="form-label">Фамилия*</label>
-                    <input type="email" class="form-control" id="inputEmail41" placeholder="Фамилия">
-                </div>
-
-                <div class="col-md-4">
-                    <label for="inputPassword51" class="form-label">Имя*</label>
-                    <input type="password" class="form-control" id="inputPassword51" placeholder="Имя">
-                </div>
-
-                <div class="col-md-4">
-                    <label for="inputPassword41" class="form-label">Отчество*</label>
-                    <input type="password" class="form-control" id="inputPassword41" placeholder="Отчество">
-                </div>
-
-        <div class="col-12">
-            <label for="inputAddress" class="form-label">Почтовый адрес*</label>
-            <input type="text" class="form-control" id="inputAddress" placeholder="Почтовый адрес">
-        </div>
-        <div class="col-12">
-            <label for="inputAddress2" class="form-label">Телефон*</label>
-            <input type="text" class="form-control" id="inputAddress2" placeholder="+7 (900) 000-12-34">
-        </div>
-
-        <div class="col-5">
-            <label for="inputAddress3" class="form-label">Электронная почта*</label>
-            <input type="text" class="form-control" id="inputAddress3" placeholder="Электронная почта">
-        </div>
-
-                <div class="col-7">
-                    <label for="inputAddress23" class="form-label">Повторите адрес электронной почты*</label>
-                    <input type="text" class="form-control" id="inputAddress23" placeholder="Повторите адрес электронной почты">
-                </div>
-
-                <p class="fw-bold">Паспортные данные </p>
-
-
-                <div class="col-4">
-            <label for="inputAddress47" class="form-label">Серия*</label>
-            <input type="text" class="form-control" id="inputAddress47" placeholder="00 00">
-        </div>
-                <div class="col-4">
-                    <label for="inputAddress49" class="form-label">Номер*</label>
-                    <input type="text" class="form-control" id="inputAddress49" placeholder="000 000">
-                </div>
-                <div class="col-4">
-                    <label for="inputAddress09" class="form-label">Дата выдачи*</label>
-                    <input type="text" class="form-control" id="inputAddress09" placeholder="01.01.0000">
-                </div>
-
-
-        <div class="col-md-12">
-            <label for="inputState" class="form-label">Кем выдан*</label>
-            <input type="text" class="form-control" id="inputState" placeholder="Кем выдан">
-        </div>
-
-
-
-        <p class="fw-bold">Документы</p>
-
-        <p class="text-sm-start">Перечень документов, которые необходимо приложить
-            к заявке, указан в Регламенте работы сервиса</p>
-
-        <p class="text-sm-start">Максимальный объём загружаемого файла 15 Мб. Документ должен быть в формате pdf или jpg</p>
 
     </form>
 
-            <button type="button" class="btn btn-primary">Сохранить и подтвердить e-mail</button>
 
 
     <div class="table">
@@ -153,5 +166,5 @@
     </div>
     <script src="../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-</body>
+ </body>
 </html>
