--- a/src/main/resources/reg_fl.html
+++ b/src/main/resources/reg_fl.html
@@ -22,6 +22,8 @@
         </ul>
     </div>
 
+    <div class="container">
+<div class="ogl">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Главная</a></li>
@@ -29,6 +31,7 @@
             <li class="breadcrumb-item active" aria-current="page">Участник собрания (Физическое лицо)</li>
         </ol>
     </nav>
+</div>
 
     <div class="viewport">
         <div class="login_container">
@@ -154,11 +157,8 @@
 <p></p>
         Максимальный объём загружаемого файла 15 Мб. Документ должен быть в формате pdf или jpg
             </div>
-
-
-
     </form>
-
+            </div>
 
 
     <div class="table">
