--- a/src/main/resources/reg_ip.html
+++ b/src/main/resources/reg_ip.html
@@ -12,7 +12,7 @@
 <body>
     <div class="menu">
         <ul>
-            <li class="logo"><a>LOGO</a></li>
+            <li class="logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
             <li class="nav_item"><a>Главная</a></li>
             <li class="nav_item"><a>Реестр собраний</a></li>
             <li class="nav_item"><a>Помощь</a></li>
