--- a/src/main/resources/reg_fl.html
+++ b/src/main/resources/reg_fl.html
@@ -143,8 +143,10 @@
             <input type="text" class="forms2" id="inputState" placeholder="Кем выдан">
         </div>
 
+                        <p class="prikrepit-dokument2">Прикрепить документ</p>
 
-<div>
+
+                        <div>
     <img src="/img/add%201%20(Traced).svg" class="doks2_2"/>
 
     <button type="button" class="knopka2">Сохранить и подтвердить e-mail</button>
@@ -158,6 +160,25 @@
         Максимальный объём загружаемого файла 15 Мб. Документ должен быть в формате pdf или jpg
             </div>
     </form>
+            </div>
+
+            <div class="container">
+                <div class="content">
+                    <div class="base_bg2"></div>
+                    <div class="base2">
+                        <ul>
+                            <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
+                            <li class="base_item1"><a>Выйти</a></li>
+                        </ul>
+                        <ul class="base_links">
+                            <li class="base_item2">Главная</li>
+                            <li class="base_item2">Реестр собраний</li>
+                            <li class="base_item2">Помощь</li>
+                            <li class="base_item2">Контакты</li>
+                        </ul>
+                        <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
+                    </div>
+                </div>
             </div>
 
 
