--- a/src/main/resources/reg_ip.html
+++ b/src/main/resources/reg_ip.html
@@ -143,9 +143,13 @@
             <input type="text" class="forms2" id="inputState" placeholder="Кем выдан">
         </div>
 
+                        <p class="prikrepit-dokument2">Прикрепить документ</p>
 
-<div>
+
+
+                        <div>
     <img src="/img/add%201%20(Traced).svg" class="doks2_2"/>
+
 
     <button type="button" class="knopka2">Сохранить и подтвердить e-mail</button>
 
@@ -167,8 +171,8 @@
 
                 <div class="container">
                     <div class="content">
-                        <div class="base_bg"></div>
-                        <div class="base">
+                        <div class="base_bg2"></div>
+                        <div class="base2">
                             <ul>
                                 <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
                                 <li class="base_item1"><a>Выйти</a></li>
@@ -186,5 +190,5 @@
 
     <script src="../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
- </body>
+</body>
 </html>
