Рннг окошки сделаны на 100%

--- a/src/main/resources/reg_ip.html
+++ b/src/main/resources/reg_ip.html
@@ -74,7 +74,7 @@
 
         <div class="unn2">
             <label for="inputEmail4" class="txt_obsh">ИНН*</label>
-            <input type="email" class="forms4" id="inputEmail4" placeholder="00000000">
+            <input type="email" class="forms4" id="inputEmail4" placeholder="000000000000">
         </div>
 
                 <div class="snils">
@@ -84,7 +84,7 @@
 
         <div class="codorg2">
             <label for="inputPassword4" class="txt_obsh">Код ОГРН*</label>
-            <input type="password" class="forms4" id="inputPassword4" placeholder="000 000 000 00">
+            <input type="password" class="forms4" id="inputPassword4" placeholder="000000000000000">
         </div>
 
                 <div class="famil">
