--- a/src/main/resources/reg_org_fl.html
+++ b/src/main/resources/reg_org_fl.html
@@ -29,7 +29,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Главная</a></li>
             <li class="breadcrumb-item"><a href="#">Регистрация нового пользователя</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Участник собрания (Физическое лицо)</li>
+            <li class="breadcrumb-item active" aria-current="page">Oрганизатора собрания (Физическое лицо)</li>
         </ol>
     </nav>
 </div>
@@ -37,7 +37,7 @@
     <div class="viewport">
         <div class="login_container">
             <div class="login_block">
-                    <p class="reg_uch">Регистрация участника ФЛ </p>
+                    <p class="reg_uch">Регистрация организатора ФЛ </p>
 
                     <div class="reg_uch_txt">Для регистрации на электронной площадке Вам следует заполнить приведённую ниже форму. По результатам рассмотрения заявления Вам будет направлено уведомление на указанный в форме адрес электронной почты.
                         <p>
