--- a/src/main/resources/reg_org_ql.html
+++ b/src/main/resources/reg_org_ql.html
@@ -29,14 +29,14 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="main.html">Главная</a></li>
             <li class="breadcrumb-item"><a href="#">Регистрация нового пользователя</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Участник собрания (Юридическое лицо)</li>
+            <li class="breadcrumb-item active" aria-current="page">Oрганизатора собрания (Юридическое лицо)</li>
         </ol>
     </nav>
     </div>
 
 
 
-    <p class="reg_uch">Регистрация участника ЮЛ</p>
+    <p class="reg_uch">Регистрация организатора ЮЛ</p>
 
 
     <div class="reg_uch_txt">Для регистрации на электронной площадке Вам следует заполнить приведённую ниже форму. По результатам рассмотрения заявления Вам будет направлено уведомление на указанный в форме адрес электронной почты.
