--- a/src/main/resources/main.html
+++ b/src/main/resources/main.html
@@ -13,12 +13,12 @@
 <div class="menu">
     <ul>
         <li class="logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
-        <li class="nav_item"><a>Главная</a></li>
+        <li class="nav_item"><a href="#">Главная</a></li>
         <li class="nav_item"><a>Реестр собраний</a></li>
         <li class="nav_item"><a>Помощь</a></li>
         <li class="nav_item"><a>Контакты</a></li>
-        <li class="nav_item"><button class="nav_btn">Войти</button></li>
-        <li class="nav_item"><a>Зарегистрироваться</a></li>
+        <li class="nav_item"><a href="login.html"><button class="nav_btn">Войти</button></a></li>
+        <li class="nav_item"><a href="signin.html">Зарегистрироваться</a></li>
     </ul>
 </div>
 
@@ -29,8 +29,8 @@
             <div class="login_block">
                 <h2>Проводим собрания кредиторов в электронном формате</h2>
                 <p class="login_text">Организация собраний кредиторов в Online и Offline режимах. Быстрый и удобный способ проведения собрания без лишних затрат</p>
-                <button class="signin">Войти</button>
-                <a class="signup" href="#">Зарегистрироваться</a>
+                <button class="signin"><a href="login.html">Войти</a></button>
+                <a class="signup" href="signin.html">Зарегистрироваться</a>
             </div>
             <div class="info_block">
                 <div class="info_item_1">
