--- a/src/main/resources/login.html
+++ b/src/main/resources/login.html
@@ -18,7 +18,7 @@
         <li class="nav_item"><a>Помощь</a></li>
         <li class="nav_item"><a>Контакты</a></li>
         <li class="nav_item"><button class="nav_btn">Войти</button></li>
-        <li class="nav_item"><a>Зарегистрироваться</a></li>
+        <li class="nav_item"><a href="signin.html">Зарегистрироваться</a></li>
     </ul>
 </div>
 <div class="container">
