--- a/src/main/resources/reg_organizatorov/reg_org_fl.html
+++ b/src/main/resources/reg_organizatorov/reg_org_fl.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style/shared.css">
-    <link rel="stylesheet" type="text/css" href="style/uchql.css">
+    <link rel="stylesheet" type="text/css" href="../style/uchql.css">
+    <link rel="stylesheet" type="text/css" href="../style/shared.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -22,13 +22,14 @@
     </ul>
 </div>
 
+
     <div class="container">
 <div class="ogl">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Главная</a></li>
             <li class="breadcrumb-item"><a href="#">Регистрация нового пользователя</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Oрганизатора собрания (Индивидуальный предприниматель)</li>
+            <li class="breadcrumb-item active" aria-current="page">Oрганизатора собрания (Физическое лицо)</li>
         </ol>
     </nav>
 </div>
@@ -36,13 +37,13 @@
     <div class="viewport">
         <div class="login_container">
             <div class="login_block">
-                    <p class="reg_uch">Регистрация организатора ИП </p>
+                    <p class="reg_uch">Регистрация организатора ФЛ </p>
 
                     <div class="reg_uch_txt">Для регистрации на электронной площадке Вам следует заполнить приведённую ниже форму. По результатам рассмотрения заявления Вам будет направлено уведомление на указанный в форме адрес электронной почты.
                         <p>
                         </p>
 
-                        Внимание! Перед регистрацией Вам следует убедиться, что у вас настроены средства ЭП в соответствии с руководством. Вы регистрируетесь как участник собрания (Индивидуальный предприниматель). </div>
+                        Внимание! Перед регистрацией Вам следует убедиться, что у вас настроены средства ЭП в соответствии с руководством. Вы регистрируетесь как участник собрания (Физическое лицо). </div>
 
 
 
@@ -72,20 +73,15 @@
 
                         <p class="inf_ob_uch">Информация об участнике собрания</p>
 
-        <div class="unn2">
+        <div class="unn">
             <label for="inputEmail4" class="txt_obsh">ИНН*</label>
             <input type="email" class="forms4" id="inputEmail4" placeholder="000000000000">
         </div>
 
-                <div class="snils">
+                <div class="codorg">
                     <label for="inputPassword5" class="txt_obsh">СНИЛС*</label>
                     <input type="password" class="forms4" id="inputPassword5" placeholder="000 000 000 00">
                 </div>
-
-        <div class="codorg2">
-            <label for="inputPassword4" class="txt_obsh">Код ОГРН*</label>
-            <input type="password" class="forms4" id="inputPassword4" placeholder="000000000000000">
-        </div>
 
                 <div class="famil">
                     <label for="inputEmail41" class="txt_obsh">Фамилия*</label>
@@ -146,10 +142,8 @@
                         <p class="prikrepit-dokument2">Прикрепить документ</p>
 
 
-
                         <div>
     <img src="/img/add%201%20(Traced).svg" class="doks2_2"/>
-
 
     <button type="button" class="knopka2">Сохранить и подтвердить e-mail</button>
 
@@ -164,31 +158,30 @@
     </form>
             </div>
 
+            <div class="container">
+                <div class="content">
+                    <div class="base_bg2"></div>
+                    <div class="base2">
+                        <ul>
+                            <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
+                            <li class="base_item1"><a>Выйти</a></li>
+                        </ul>
+                        <ul class="base_links">
+                            <li class="base_item2">Главная</li>
+                            <li class="base_item2">Реестр собраний</li>
+                            <li class="base_item2">Помощь</li>
+                            <li class="base_item2">Контакты</li>
+                        </ul>
+                        <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
+                    </div>
+                </div>
+            </div>
+
 
     <div class="table">
         <div class="table_item"></div>
     </div>
-
-                <div class="container">
-                    <div class="content">
-                        <div class="base_bg2"></div>
-                        <div class="base2">
-                            <ul>
-                                <li class="base_logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
-                                <li class="base_item1"><a>Выйти</a></li>
-                            </ul>
-                            <ul class="base_links">
-                                <li class="base_item2">Главная</li>
-                                <li class="base_item2">Реестр собраний</li>
-                                <li class="base_item2">Помощь</li>
-                                <li class="base_item2">Контакты</li>
-                            </ul>
-                            <p class="copyright">© 2011-2022 Оператор торговой площадки - ООО «ТендерСтандарт». Все права защищены.</p>
-                        </div>
-                    </div>
-                </div>
-
-    <script src="../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
+    <script src="../../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
