--- a/src/main/resources/reg_organizatorov/reg_org_ip.html
+++ b/src/main/resources/reg_organizatorov/reg_org_ip.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style/shared.css">
-    <link rel="stylesheet" type="text/css" href="style/uchql.css">
+    <link rel="stylesheet" type="text/css" href="../style/shared.css">
+    <link rel="stylesheet" type="text/css" href="../style/uchql.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -28,7 +28,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Главная</a></li>
             <li class="breadcrumb-item"><a href="#">Регистрация нового пользователя</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Oрганизатора собрания (Арбитражный управляющий)</li>
+            <li class="breadcrumb-item active" aria-current="page">Oрганизатора собрания (Индивидуальный предприниматель)</li>
         </ol>
     </nav>
 </div>
@@ -36,13 +36,13 @@
     <div class="viewport">
         <div class="login_container">
             <div class="login_block">
-                    <p class="reg_uch">Регистрация организатора АУ </p>
+                    <p class="reg_uch">Регистрация организатора ИП </p>
 
                     <div class="reg_uch_txt">Для регистрации на электронной площадке Вам следует заполнить приведённую ниже форму. По результатам рассмотрения заявления Вам будет направлено уведомление на указанный в форме адрес электронной почты.
                         <p>
                         </p>
 
-                        Внимание! Перед регистрацией Вам следует убедиться, что у вас настроены средства ЭП в соответствии с руководством. Вы регистрируетесь как участник собрания (Арбитражный управляющий). </div>
+                        Внимание! Перед регистрацией Вам следует убедиться, что у вас настроены средства ЭП в соответствии с руководством. Вы регистрируетесь как участник собрания (Индивидуальный предприниматель). </div>
 
 
 
@@ -83,8 +83,8 @@
                 </div>
 
         <div class="codorg2">
-            <label for="inputPassword4" class="txt_obsh">Регистрационный номер АУ*</label>
-            <input type="password" class="forms4" id="inputPassword4" placeholder="000 000">
+            <label for="inputPassword4" class="txt_obsh">Код ОГРН*</label>
+            <input type="password" class="forms4" id="inputPassword4" placeholder="000000000000000">
         </div>
 
                 <div class="famil">
@@ -110,11 +110,6 @@
             <label for="inputAddress2" class="txt_obsh">Телефон*</label>
             <input type="text" class="forms" id="inputAddress2" placeholder="+7 (900) 000-12-34">
         </div>
-
-                        <div class="nazv_org">
-                            <label for="inputAddress213" class="txt_obsh">Название саморегулируемой организации*</label>
-                            <input type="text" class="forms3" id="inputAddress213" placeholder="Название саморегулируемой организации">
-                        </div>
 
         <div class="email2">
             <label for="inputAddress3" class="txt_obsh">Электронная почта*</label>
@@ -193,7 +188,7 @@
                     </div>
                 </div>
 
-    <script src="../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
+    <script src="../../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
