--- a/src/main/resources/reg_uchastnikov/reg_ql.html
+++ b/src/main/resources/reg_uchastnikov/reg_ql.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style/shared.css">
-    <link rel="stylesheet" type="text/css" href="style/uchql.css">
+    <link rel="stylesheet" type="text/css" href="../style/shared.css">
+    <link rel="stylesheet" type="text/css" href="../style/uchql.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -27,7 +27,7 @@
 
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="main.html">Главная</a></li>
+            <li class="breadcrumb-item"><a href="../main.html">Главная</a></li>
             <li class="breadcrumb-item"><a href="#">Регистрация нового пользователя</a></li>
             <li class="breadcrumb-item active" aria-current="page">Участник собрания (Юридическое лицо)</li>
         </ol>
@@ -158,7 +158,7 @@
         </div>
     </div>
 
-    <script src="../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
+    <script src="../../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
