начал днлпть лк для орг 2

--- a/src/main/resources/reg_uchastnikov/reg_ql.html
+++ b/src/main/resources/reg_uchastnikov/reg_ql.html
@@ -121,20 +121,16 @@
 
         <p class="doks">Документы</p>
 
-        <p class="txt">Перечень документов, которые необходимо приложить
-            к заявке, указан в Регламенте работы сервиса</p>
-
-        <p class="txt2">Максимальный объём загружаемого файла 15 Мб. Документ должен быть в формате pdf или jpg</p>
-
+                <div class="txt">
+                    Перечень документов, которые необходимо приложить к заявке, указан в Регламенте работы сервиса
+<p></p>
+                    Максимальный объём загружаемого файла 15 Мб. Документ должен быть в формате pdf или jpg
+                </div>
 
 
     </form>
 </div>
     </div>
-
-
-
-
     <div class="table">
         <div class="table_item"></div>
     </div>
