--- a/src/main/resources/lichnui_kobinet/lk2_org.html
+++ b/src/main/resources/lichnui_kobinet/lk2_org.html
@@ -189,11 +189,12 @@
             </div>
 
 
-    <script src="../../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
+    <script src="/jquery/jquery-3.6.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-        <script>$(document).ready(function () {
+    <script>
+        $(document).ready(function () {
             $(".sort_drop").hide()
-        })
+        });
         $(document).ready(function(){
             $(".arrw").click(function(){
                 $(".sort_drop").slideDown()
@@ -241,6 +242,10 @@
             $(".sort3").click(function(){
                 $(".sort_val").text("статусу")
             });
-        });</script>
+        });
+    </script>
+
+
+
 </body>
 </html>
