Я в душе помидорка или утка

--- a/src/main/resources/lichnui_kobinetu/lk_uch/lk_uch.html
+++ b/src/main/resources/lichnui_kobinetu/lk_uch/lk_uch.html
@@ -28,7 +28,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Главная</a></li>
-            <li class="breadcrumb-item"> Личный кабинет организатора </li>
+            <li class="breadcrumb-item">Личный кабинет участника </li>
         </ol>
     </nav>
 </div>
@@ -40,19 +40,19 @@
             <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item active" aria-current="page"><p class="ld">Личные данные</p></li>
-                    <li class="breadcrumb-item"><a href="#"><p class="org_sobr">Организация собраний</p></a></li>
+                    <li class="breadcrumb-item"><a href="#"><p class="org_sobr">Участие в собраниях</p></a></li>
                     <li class="breadcrumb-item"><a href="#"><p class="chern_zaiav">Черновики заявок</p></a></li>
                 </ol>
             </nav>
 
             <img class="logout-1-traced"
                     src="https://static.overlay-tech.com/assets/3373d3e0-dfbb-4718-9044-d75c865a7c23.svg"/>
-            <p class="login">Светлана И.</p>
+            <p class="login">Михаил И.</p>
             <div class="poloska"></div>
 
         </form>
 
-        <form class="table2">
+        <form class="table_uch">
 
             <p class="ld2">Личные данные</p>
 
@@ -104,43 +104,9 @@
                 <input type="email" class="forms3" id="new_pas2" placeholder="********">
             </div>
 
-            <p class="pass">Паспортные данные</p>
-
-            <div class="seria">
-                <label for="seria" class="txt_obsh">Серия*</label>
-                <input type="email" class="forms4" id="seria" placeholder="00 00">
-            </div>
-            <div class="nomer">
-                <label for="nomer" class="txt_obsh">Номер*</label>
-                <input type="email" class="forms4" id="nomer" placeholder="000 000">
-            </div>
-            <div class="data">
-                <label for="data" class="txt_obsh">Дата выдачи*</label>
-                <input type="email" class="forms4" id="data" placeholder="01.01.0000">
-            </div>
-            <div class="kem_vidan">
-                <label for="kem_vidan" class="txt_obsh">Кем выдан*</label>
-                <input type="email" class="forms2" id="kem_vidan" placeholder="Кем выдан">
-            </div>
-
-            <p class="doks">Документы</p>
-
-            <div class="doks_txt">Перечень документов, которые необходимо приложить к заявке, указан в Регламенте работы сервиса
-                <p></p>
-                Максимальный объём загружаемого файла 15 Мб. Документ должен быть в формате pdf или jpg
-            </div>
-
-            <img src="/img/add%201%20(Traced).svg" class="dor"/>
-            <p class="prek_dok">Прикрепить документ</p>
-            <button type="button" class="knopka">Сохранить и подписать изменения ЭП</button>
-
-
-
-
-
+            <button type="button" class="knopka_uch">Сохранить и подписать изменения ЭП</button>
 
         </form>
-
 
         <div class="container">
                 <div class="content">
