--- a/src/main/resources/help_3.html
+++ b/src/main/resources/help_3.html
@@ -49,7 +49,7 @@
       </ul>
       <ul class="inline">
         <li>Телефон*</li>
-        <li><input type="text" /></li>
+        <li><input type="text" class="phone"/></li>
       </ul>
       <ul class="inline second">
         <li>Электронная почта*</li>
@@ -92,5 +92,11 @@
 <script src="jquery/jquery-3.6.0.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<script>
+  $(document).ready(function(){
+    $.mask.definitions['0'] = "[0-9]";
+    $(".phone").mask("+7(000)000-00-00");
+  });
+</script>
 </body>
 </html>
