--- a/src/main/resources/help_3.html
+++ b/src/main/resources/help_3.html
@@ -49,7 +49,7 @@
       </ul>
       <ul class="inline">
         <li>Телефон*</li>
-        <li><input type="text" class="phone"/></li>
+        <li><input type="text" placeholder="+7 (900) 000-12-34" class="phone"/></li>
       </ul>
       <ul class="inline second">
         <li>Электронная почта*</li>
