Я в душе помидорка или утка? yz z dc

--- a/src/main/resources/lichnui_kobinetu/lk_uch/lk2_uch.html
+++ b/src/main/resources/lichnui_kobinetu/lk_uch/lk2_uch.html
@@ -89,34 +89,8 @@
                         <li class="thin_text">Даты приема заявок</li>
                         <li>14.04.2022 - 28.04.2022 </li>
                     </ul>
-
+                    <ul>
                     <button type="button" class="knopka_uch_join">Присоединиться</button>
-
-                </div>
-            </div>
-            <div class="table_item_uch">
-                <h3 class="table_h">1013 Очное</h3>
-                <ul class="table_data">
-                    <li class="thin_text">Организатор</li>
-                    <li>ООО «Право-Торг»</li>
-                </ul>
-                <ul class="table_data">
-                    <li class="thin_text">Должник</li>
-                    <li>Бальдяева Юлия Александровна</li>
-                </ul>
-                <ul class="table_data">
-                    <li class="thin_text">Статус</li>
-                    <li>Отменено Органзатором</li>
-                </ul>
-                <div class="vl"></div>
-                <div class="date">
-                    <ul class="datetime">
-                        <li class="thin_text">Дата проведения собрания</li>
-                        <li>29.04.2022 14:00</li>
-                    </ul>
-                    <ul class="datetime">
-                        <li class="thin_text">Даты приема заявок</li>
-                        <li>14.04.2022 - 28.04.2022 </li>
                     </ul>
                 </div>
             </div>
@@ -143,6 +117,41 @@
                     <ul class="datetime">
                         <li class="thin_text">Даты приема заявок</li>
                         <li>14.04.2022 - 28.04.2022 </li>
+                    </ul>
+                    <ul>
+                        <button type="button"  disabled="true" class="knopka_uch_unjoin" > Присоединиться</button>
+                    </ul>
+                </div>
+            </div>
+            <div class="table_item_uch">
+                <h3 class="table_h">1013 Очное</h3>
+                <ul class="table_data">
+                    <li class="thin_text">Организатор</li>
+                    <li>ООО «Право-Торг»</li>
+                </ul>
+                <ul class="table_data">
+                    <li class="thin_text">Должник</li>
+                    <li>Бальдяева Юлия Александровна</li>
+                </ul>
+                <ul class="table_data">
+                    <li class="thin_text">Статус</li>
+                    <li>Отменено Органзатором</li>
+                </ul>
+                <div class="vl"></div>
+                <div class="date">
+                    <ul class="datetime">
+                        <li class="thin_text">Дата проведения собрания</li>
+                        <li>29.04.2022 14:00</li>
+                    </ul>
+                    <ul class="datetime">
+                        <li class="thin_text">Даты приема заявок</li>
+                        <li>14.04.2022 - 28.04.2022 </li>
+                    </ul>
+                    <ui>
+                        <p class="txt_ob_aktivnocti">Кнопка станет активной за 30 минут до начала собрания</p>
+                    </ui>
+                    <ul>
+                        <button type="button"  disabled="true" class="knopka_uch_unjoin" > Присоединиться</button>
                     </ul>
                 </div>
             </div>
