--- a/src/main/resources/help/help_3.html
+++ b/src/main/resources/help/help_3.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" type="text/css" href="style/shared.css">
-  <link rel="stylesheet" type="text/css" href="style/help_3.css">
+  <link rel="stylesheet" type="text/css" href="../style/shared.css">
+  <link rel="stylesheet" type="text/css" href="../style/help_3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <title>SK_JS</title>
@@ -18,13 +18,13 @@
     <li class="nav_item"><a>Помощь</a></li>
     <li class="nav_item"><a>Контакты</a></li>
     <li class="nav_item"><button class="nav_btn">Войти</button></li>
-    <li class="nav_item"><a href="signin.html">Зарегистрироваться</a></li>
+    <li class="nav_item"><a href="../signin.html">Зарегистрироваться</a></li>
   </ul>
 </div>
 <div class="container">
   <div class="content">
 
-    <div class="bc"><a href="main.html">Главная</a>/<a href="help_1.html">Помощь</a></div>
+    <div class="bc"><a href="../main.html">Главная</a>/<a href="help_1.html">Помощь</a></div>
 
     <p class="heading">Помощь</p>
 
@@ -41,7 +41,7 @@
       <p>Обратная связь</p>
       <ul>
         <li>Выберите категорию*</li>
-        <li class="oneline"><a>Кто будет арбитражным управляющим?</a><img src="img/down_arrow.svg"></li>
+        <li class="oneline"><a>Кто будет арбитражным управляющим?</a><img src="../img/down_arrow.svg"></li>
         <li>Тема сообщения*</li>
         <li><input type="text" placeholder="Тема сообщения" class="oneline"/></li>
         <li>Детальное описание*</li>
@@ -58,7 +58,7 @@
       <p>Документы</p>
       <h6>Максимальный объём загружаемого файла 15 Мб. <br>Документ должен быть в формате doc, docx, xls, xlsx, txt, pdf, jpg.</h6>
       <div class="upload">
-        <img src="img/add%201%20(Traced).svg" />
+        <img src="../img/add%201%20(Traced).svg" />
         <label for="file">
           <u><b>Прикрепить документ</b></u>
           <input type="file" id="file">
@@ -89,7 +89,7 @@
     </div>
   </div>
 </div>
-<script src="jquery/jquery-3.6.0.js"></script>
+<script src="../jquery/jquery-3.6.0.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <script>
