lk2_org скрипт готов

--- a/src/main/resources/lichnui_kobinetu/lk_org/lk2_org.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/lk2_org.html
@@ -267,6 +267,24 @@
                 });
             });
         });
+        $(document).ready(function(){
+            $(".add_drop li").click(function(){
+                $(".add_drop").slideUp()
+            }).click(function(){
+                $(".table").animate({
+                    opacity: "1"
+                });
+            });
+        });
+        $(document).ready(function(){
+            $(".add_drop").mouseleave(function(){
+                $(".add_drop").slideUp()
+            }).mouseleave(function(){
+                $(".table").animate({
+                    opacity: "1"
+                });
+            });
+        });
     </script>
 
 
