--- a/src/main/resources/lichnui_kobinetu/lk_org/lk2_org.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/lk2_org.html
@@ -28,7 +28,7 @@
 <div class="ogl_l">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Главная</a></li>
+            <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Главная</a></li>
             <li class="breadcrumb-item"> Личный кабинет организатора </li>
         </ol>
     </nav>
