--- a/src/main/resources/reg_organizatorov/reg_org_fl.html
+++ b/src/main/resources/reg_organizatorov/reg_org_fl.html
@@ -27,8 +27,8 @@
 <div class="ogl">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Главная</a></li>
-            <li class="breadcrumb-item"><a href="#">Регистрация нового пользователя</a></li>
+            <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Главная</a></li>
+            <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Регистрация нового пользователя</a></li>
             <li class="breadcrumb-item active" aria-current="page">Oрганизатора собрания (Физическое лицо)</li>
         </ol>
     </nav>
