--- a/src/main/resources/reg_organizatorov/reg_org_ql.html
+++ b/src/main/resources/reg_organizatorov/reg_org_ql.html
@@ -27,8 +27,8 @@
 
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="../main.html">Главная</a></li>
-            <li class="breadcrumb-item"><a href="#">Регистрация нового пользователя</a></li>
+            <li class="breadcrumb-item"><a class="anti_tekst"  href="../main.html">Главная</a></li>
+            <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Регистрация нового пользователя</a></li>
             <li class="breadcrumb-item active" aria-current="page">Oрганизатора собрания (Юридическое лицо)</li>
         </ol>
     </nav>
