--- a/src/main/resources/reg_uchastnikov/reg_fl.html
+++ b/src/main/resources/reg_uchastnikov/reg_fl.html
@@ -27,9 +27,9 @@
 <div class="ogl">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Главная</a></li>
-            <li class="breadcrumb-item"><a href="#">Регистрация нового пользователя</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Участник собрания (Физическое лицо)</li>
+            <li class="breadcrumb-item"><a class="anti_tekst" href="../main.html">Главная</a></li>
+            <li class="breadcrumb-item"><a class="anti_tekst" href="#">Регистрация нового пользователя</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Участник собрания (Индивидуальный предприниматель)</li>
         </ol>
     </nav>
 </div>
